--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/bartw/pend/issues"
   },
-  "homepage": "https://github.com/bartw/pend#readme"
+  "homepage": "https://github.com/bartw/pend#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
