--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,18 @@
-db:
-  image: postgres:latest
-  environment:
-    - POSTGRES_USER=pender
-    - POSTGRES_PASSWORD=p3nd
-    - POSTGRES_DB=pend
-  ports:
-    - "5432:5432"
-pend:
-  build: .
-  ports:
-    - "3000:3000"
-  links:
-    - db
+version: '2'
+
+services:
+  db:
+    image: postgres:latest
+    environment:
+      - POSTGRES_USER=pender
+      - POSTGRES_PASSWORD=p3nd
+      - POSTGRES_DB=pend
+    ports:
+      - "5432:5432"
+
+  server:
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
