--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "pend is Postgres Express Node Docker",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon -L index.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
   "dependencies": {
     "express": "^4.14.0",
     "pg-promise": "^5.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
